--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -65,7 +65,7 @@
             }
             function show_start_hardware_btn() {
                 $(".start_hardware, .stop_hardware").remove();
-                $("#hardware_btn_container").prepend('<button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>');
+                $("#hardware_btn_container").prepend('<button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать оборудование</button>');
             }
             function show_stop_hardware_btn() {
                 $("#start_ident").attr('disabled', 'disabled');
@@ -169,17 +169,27 @@
 
 <!-- блок со списком оборудования -->
 <div id="hardware_container"  style="display:none;">
-    <div class="mt-3 p-3 bg-white rounded box-shadow" id="div1" style="display:none;">
-        <h6 class="border-bottom border-gray pb-2 mb-0">Оборудование у сотрудника</h6>
+    <div class="mt-3 p-3 bg-white rounded box-shadow" id="div1" >
+        <h6 class="border-gray pb-2 mb-0">Оборудование у сотрудника</h6>
+            <!--<div class="media text-muted pb-2 border-bottom ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3 hardware_worker_btn_container">
+                            <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>
+                        </div>
+                    </div>
+                </div>
+            </div>-->
         <div>
-
-            <table class="table">
-                <tr style="font-weight: bold;">
-                    <th width="40%">Наименование оборудования</th>
-                    <td align="center" width="20%">Когда выдано</td>
-                    <td align="center" width="20%">&nbsp;</td>
-                    <td align="center" width="20%">Принять</td>
-                </tr>
+            <table class="table table-hover ">
+                <thead>
+                    <tr style="font-weight: bold;">
+                        <th scope="col">Наименование оборудования</th>
+                        <th class="text-center" width="20%" scope="col">Когда выдано</th>
+                        <th class="text-center" width="20%" scope="col">&nbsp;</th>
+                        <th class="text-center" width="20%" scope="col">Принять</th>
+                    </tr>
+                </thead>
                 <tbody id="hardw_list_input">
                 </tbody>
             </table>
@@ -195,15 +205,12 @@
     </div>
 
 
-    <div class="mt-3 p-3 bg-white rounded box-shadow" id="div2">
-        <h6 class="border-gray pb-2 mb-0">Оборудование для выдачи</h6>
-
-        <div class="media text-muted pb-2 border-bottom ">
+        <div class="media text-muted pb-2 pt-2 mt-2">
             <div class="container">
                 <div class="row">
                     <div class="col-3">
                         <div class="btn-group" id="hardware_btn_container">
-                          <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>
+                          <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать оборудование</button>
                           <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="sr-only">Toggle Dropdown</span>
                           </button>
@@ -223,11 +230,15 @@
 
         </div>
 
+    <div class="mt-2 p-3 bg-white rounded box-shadow" id="div2">
+        <h6 class="border-gray pb-2 mb-0  border-bottom">Оборудование для выдачи</h6>
+
+
         <div id="hardw_list_output">
 
         </div>
         <small class="d-block text-right mt-3" id="in_pocess">
-            <button type="button" class="btn btn-outline-success" id="give_hard_btn" style="display: none;" disabled="disabled">Выдать оборудование</button>
+            <button type="button" class="btn btn-outline-success" id="give_hard_btn" disabled="disabled">Выдать оборудование</button>
         </small>
 
         <small style="display: none;" class="text-right mt-3" id="sucess">
