--- a/hardcontrol/templates/hardcontrol/hard_list.html
+++ b/hardcontrol/templates/hardcontrol/hard_list.html
@@ -8,7 +8,15 @@
 
             <div class="media-body pb-3 mb-0 border-bottom border-gray">
 
-
+        <form action="{% url 'hard_list' %}" method="get">
+    {%  csrf_token %}
+<div class="input-group mb-2 col-md-5">
+  <input type="text" name="title" value="{% if request.GET.title %}{{ request.GET.title }}{% endif %}" class="form-control" placeholder="Наименование оборудование" aria-label="Наименование оборудование" aria-describedby="basic-addon2">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="submit">Найти</button>
+  </div>
+</div>
+</form>
 
 
 
@@ -19,6 +27,12 @@
 
 
     <div class="mt-3 p-3 bg-white rounded box-shadow">
+       {% if request.GET.title %}
+
+            <h5 class="text-center"> Поиск по фразе:  <i>  {{ request.GET.title }} </i> </h5>
+
+            {% endif %}
+
         <h6 class="pb-2 mb-0"><b>Оборудование</b></h6>
         <div class="media  pt-3">
 
