--- a/hardcontrol/templates/hardcontrol/worker_list.html
+++ b/hardcontrol/templates/hardcontrol/worker_list.html
@@ -9,6 +9,15 @@
             <div class="media-body pb-3 mb-0 border-bottom border-gray">
 
 
+<form action="{% url 'worker_list' %}" method="get">
+    {%  csrf_token %}
+<div class="input-group mb-2 col-md-5">
+  <input type="text" name="last_name" value="{% if request.GET.last_name %}{{ request.GET.last_name }}{% endif %}" class="form-control" placeholder="Фамилия сотрудника" aria-label="Recipient's username" aria-describedby="basic-addon2">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="submit">Найти</button>
+  </div>
+</div>
+</form>
 
 
 
@@ -19,6 +28,12 @@
 
 
     <div class="mt-3 p-3 bg-white rounded box-shadow">
+       {% if request.GET.last_name %}
+
+            <h5 class="text-center"> Поиск по фразе:  <i>  {{ request.GET.last_name }} </i> </h5>
+
+            {% endif %}
+
         <h6 class="pb-2 mb-0"><b>Сотрудники</b></h6>
         <div class="media  pt-3">
 
@@ -30,12 +45,15 @@
 
  {% for list in object_list %}
 
+     {% if list.is_superuser != True  %}
+
 <tr>
 <td>
     <a href="{% url 'worker_detail' list.pk %}"> {{ list.first_name }} {{ list.last_name }} </a>
 </td>
 
      </tr>
+     {% endif %}
 
 
  {% endfor  %}
