--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -97,7 +97,7 @@
 
                     if (msg.uhf_id !== undefined) {
                         if (msg.uhf_id !== "") {
-                           insert_hahdware_to_list (msg.uhf_name, msg.uhf_dbid);
+                           insert_hahdware_to_list (msg.uhf_name, msg.uhf_dbid, 1);
                         } else {
                         }
                     }
