--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -74,7 +74,7 @@
 
 
 
-    <main role="main" class="container" style="margin-top: 150px;">
+    <main role="main" class="container" style="margin-top: 60px;">
 
 
        {% block content %}
@@ -121,7 +121,7 @@
             var this_worker;
             $('#hardw_list_output').html('');
             //$('#give_hard_btn').hide();
-            $('#div2').hide();
+            //$('#div2').hide();
 
             $.getJSON('get_worker/', {worker_id:worker_id}, function(data){
                 $("#hardware_container").show();
@@ -186,8 +186,8 @@
 
                             $('#hardw_list_input').append('<tr id="inputrem' + data2.pk + '">' +
                                 '<td>' + data2.fields.title + '</td>' +
-                                '<td align="center">' + a + '</td>' +
-                                '<td align="center"><input type="checkbox" name="sa' + data2.pk + '" value="' + data2.pk + '" disabled="disabled"  class="select_auto"></td>' +
+                                '' +
+                                '<td align="center"><input type="checkbox" name="sa' + data2.pk + '" value="' + data2.pk + '" disabled="disabled"  class="select_auto">' +
                                 '<td align="center"><input type="checkbox" value="' + data2.pk + '" class="select_manual"></td>' +
                                 '</tr>');
 
@@ -198,7 +198,7 @@
                     });
                 }
                 else {
-                    $("#div1").hide();
+                   // $("#div1").hide();
                 }
 
             });
