--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -176,48 +176,13 @@
 
 <!-- блок со списком оборудования -->
 <div id="hardware_container"  style="display:none;">
-    <div class="mt-3 p-3 bg-white rounded box-shadow" id="div1" >
-        <h6 class="border-gray pb-2 mb-0">Оборудование у сотрудника</h6>
-            <!--<div class="media text-muted pb-2 border-bottom ">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3 hardware_worker_btn_container">
-                            <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-        <div>
-            <table class="table table-hover ">
-                <thead>
-                    <tr style="font-weight: bold;">
-                        <th scope="col">Наименование оборудования</th>
-                        <th class="text-center" width="20%" scope="col">Когда выдано</th>
-                        <th class="text-center" width="20%" scope="col">&nbsp;</th>
-                        <th class="text-center" width="20%" scope="col">Принять</th>
-                    </tr>
-                </thead>
-                <tbody id="hardw_list_input">
-                </tbody>
-            </table>
-        </div>
-        <small class="d-block text-right mt-3" id="in_pocess">
-            <button type="button" class="btn btn-outline-danger" id="input_hard_btn" disabled="disabled">Принять оборудование</button>
-        </small>
 
-        <small style="display: none;" class="text-right mt-3" id="sucess">
-            <a type="button" href="/" class="btn btn-outline-success" id="">Оборудование по списку принято, продолжить</a>
-        </small>
-
-    </div>
-
-
-        <div class="media text-muted pb-2 pt-2 mt-2">
+    <div class="media text-muted pb-2 pt-2 mt-2">
             <div class="container">
-                <div class="row">
-                    <div class="col-3">
+                <div class="row text-center">
+                    <div class="col-2 offset-5">
                         <div class="btn-group" id="hardware_btn_container">
-                          <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать оборудование</button>
+                          <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>
                           <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="sr-only">Toggle Dropdown</span>
                           </button>
@@ -233,11 +198,47 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
 
-    <div class="mt-2 p-3 bg-white rounded box-shadow" id="div2">
+    <div class="row justify-content-around">
+
+    <div class="mt-2 p-3 bg-white rounded box-shadow col-md-5" id="div1" >
+        <h6 class="border-gray pb-2 mb-0">Оборудование у сотрудника</h6>
+            <!--<div class="media text-muted pb-2 border-bottom ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3 hardware_worker_btn_container">
+                            <button type="button" class="btn btn-info start_hardware" onclick="start_hardware()">Сканировать</button>
+                        </div>
+                    </div>
+                </div>
+            </div>-->
+        <div>
+            <table class="table table-hover ">
+{#                <thead>#}
+{#                    <tr style="font-weight: bold;">#}
+{#                        <th scope="col">Наименование</th>#}
+{#                        <th class="text-center" width="20%" scope="col">Принять</th>#}
+{#                    </tr>#}
+{#                </thead>#}
+                <tbody id="hardw_list_input">
+                </tbody>
+            </table>
+        </div>
+        <small class="d-block text-right mt-3" id="in_pocess">
+            <button type="button" class="btn btn-outline-danger" id="input_hard_btn" disabled="disabled">Принять оборудование</button>
+        </small>
+
+        <small style="display: none;" class="text-right mt-3" id="sucess">
+            <a type="button" href="/" class="btn btn-outline-success" id="">Оборудование по списку принято, продолжить</a>
+        </small>
+
+    </div>
+
+
+
+
+    <div class="mt-2 p-3 bg-white rounded box-shadow col-md-5 col-offset-2" id="div2">
         <h6 class="border-gray pb-2 mb-0  border-bottom">Оборудование для выдачи</h6>
 
 
@@ -254,6 +255,7 @@
 
     </div>
  </div>
+    </div>
 </form>
 
 <div class="modal" tabindex="-1" role="dialog" id="workers">
