--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -209,7 +209,7 @@
           if ($('.hardware_item').length) {
               $('#div2').show();
           } else {
-              $('#div2').hide();
+             // $('#div2').hide();
           }
         }
 
