--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -194,7 +194,9 @@
                         {#                <button type="button" class="btn btn-outline-info">Сканировать</button>#}
                         {#                <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#hard">Выбрать</button>#}
                     </div>
-                    <div class="col-6 report_hardware">
+                    </div>
+                    <div class="row text-center">
+                    <div class="col-12 text-center report_hardware">
                     </div>
                 </div>
             </div>
