Автосканирование отпечатка пальца

--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -87,6 +87,7 @@
                             if (msg.user_id !== -1) {
                                 show_ident_btn();
                                 select_worker(msg.user_id, 0);
+                                start_hardware();
                             }
                             showImg();
                         }
