--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -157,6 +157,7 @@
                     <div class="col-3 text-right">
                         <div id="imgResult"></div>
                     </div>
+
                     <div class="col-6 text-left">
                         <div class="report">
                             <b></b>
@@ -172,6 +173,11 @@
                             <input type="hidden" value="" id="manual_selected" name="manual_selected" value="False">
                         </div>
                     </div>
+
+                    <div class="col-3 text-left">
+                        <div id="worker_photo"></div>
+                    </div>
+
                 </div>
 
 
