--- a/hardcontrol/templates/hardcontrol/worker_detail.html
+++ b/hardcontrol/templates/hardcontrol/worker_detail.html
@@ -8,7 +8,10 @@
         <h6 class="border-bottom border-gray pb-2 mb-0">Сотрудник</h6>
         <div class="media  pt-3">
 
-            <div class="media-body pb-3 mb-0 border-bottom border-gray">
+            <div class="col-md-2"><img src="{{ profile.foto.url }}" height="150"></div>
+
+            <div  class=" col-md-4 media-body pb-3 mb-0 border-bottom border-gray">
+
 
             <h2>{{ worker.first_name }} {{ worker.last_name }}</h2>
 
