--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -119,9 +119,8 @@
 
       function get_hard_complect(hard_id) {
 
-             $.get('hard_complect/', {hard_id: id}, function(data){
+             $.get('hard_complect/', {hard_id: hard_id}, function(data){
 
-                alert(data);
 
                 $('#complect_modal').modal('show');
 
@@ -224,7 +223,7 @@
 
 
                             $('#hardw_list_input').append('<tr id="inputrem' + data2.pk + '">' +
-                                '<td>' + data2.fields.title + '</td>' +
+                                '<td><a href="#" onclick="get_hard_complect('+data2.pk+')">' + data2.fields.title + '</a></td>' +
                                 '' +
                                 '<td align="center"><input type="checkbox" name="sa' + data2.pk + '" value="' + data2.pk + '" disabled="disabled"  class="select_auto">' +
                                 '<td align="center"><input type="checkbox" value="' + data2.pk + '" class="select_manual"></td>' +
@@ -264,7 +263,7 @@
               if ((hard_status) && (!hard_repair)) {
                   $('#hardw_list_output').append(' <div id="item' + hard_id + '" class="hardware_item media-body pb-3 pt-3 mb-0 small lh-125 border-bottom border-gray">\n' +
                       '            <div class="d-flex justify-content-between align-items-center w-100">\n' +
-                      '              <strong class="text-gray-dark"><a onclick="get_hard_complect('+hard_id+')">' + hard_name + '</a></strong>\n' +
+                      '              <strong class="text-gray-dark"><a href="#" onclick="get_hard_complect('+hard_id+')">' + hard_name + '</a></strong>\n' +
                       '              <a onclick="rem_item(' + hard_id + ')" style="cursor:pointer;" id="rem' + hard_id + '" class="rem_item"">Удалить</a>\n' +
                       '            </div>\n' +
                       '            <span class="d-block"></span>\n' +
